syntax = "proto3";

package hello_http;
option go_package = "hello_http/";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// 2 定义 swagger 相关的内容
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  ERROR: {
    title: "grpc gateway sample";
    version: "1.0";
    license: {
      name: "MIT";
    };
  };
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};

// 定义Hello服务
service HelloHTTP {
  // 定义SayHello方法
  rpc SayHello(HelloHTTPRequest) returns (HelloHTTPResponse) {
    // http option
    option (google.api.http) = {
      post: "/example/echo"
      body: "*"
    };
  }
}

// HelloRequest 请求结构
message HelloHTTPRequest {
  string name = 1;
}

// HelloResponse 响应结构
message HelloHTTPResponse {
  string message = 1;
}